@@ -3,6 +3,11 @@
 	Backported from mainline
 	2019-12-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/92732
+	* g++.dg/cpp2a/bitfield3.C: Don't expect narrowing conversion
+	warnings.
+	* g++.dg/cpp2a/bitfield4.C: New test.
+
 	PR c++/92695
 	* g++.dg/cpp2a/constexpr-virtual14.C: New test.
 
