@@ -3,6 +3,10 @@
 	Backported from mainline
 	2019-12-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/92732
+	* typeck2.c (digest_nsdmi_init): For bitfields, use
+	DECL_BIT_FIELD_TYPE instead of TREE_TYPE.
+
 	PR c++/92695
 	* constexpr.c (cxx_bind_parameters_in_call): For virtual calls,
 	adjust the first argument to point to the derived object rather
